[gd_scene load_steps=55 format=3 uid="uid://co2pn00d3aq6n"]

[ext_resource type="Script" uid="uid://0d4qas52ty3p" path="res://characters/_player/_script/player.gd" id="1_c6xgn"]
[ext_resource type="Texture2D" uid="uid://bud8qwhjye3nu" path="res://characters/_player/froggy/assets/Jump (32x32).png" id="1_s2jb6"]
[ext_resource type="Texture2D" uid="uid://04o6fp4vr47k" path="res://characters/_player/froggy/assets/Double Jump (32x32).png" id="2_8io72"]
[ext_resource type="Texture2D" uid="uid://bqgiwglo7flq2" path="res://characters/_player/froggy/assets/Idle (32x32).png" id="2_onk8j"]
[ext_resource type="Texture2D" uid="uid://6hrew56sl24v" path="res://characters/_player/froggy/assets/Fall (32x32).png" id="2_yaiw4"]
[ext_resource type="Texture2D" uid="uid://cmx3egbygeh0f" path="res://characters/_player/froggy/assets/Run (32x32).png" id="4_78bfd"]
[ext_resource type="Script" uid="uid://d2ylh53h5m14j" path="res://states/state_machine.gd" id="6_aau3j"]
[ext_resource type="Script" uid="uid://cp0e5rbfc4u2c" path="res://characters/_player/_script/states/idle/idle.gd" id="7_khrki"]
[ext_resource type="Texture2D" uid="uid://wqylcdxn5gtk" path="res://characters/_player/froggy/assets/Wall Jump (32x32).png" id="7_ydpga"]
[ext_resource type="Script" uid="uid://rnvaiksy3o6a" path="res://characters/_player/_script/states/move/move.gd" id="8_c6xgn"]
[ext_resource type="Script" uid="uid://b586jjb6d2v7o" path="res://characters/_player/_script/states/jump/jump.gd" id="9_c6xgn"]
[ext_resource type="Script" uid="uid://dos5r1j8a7vnw" path="res://characters/_player/_script/states/fall/fall.gd" id="10_tyn13"]
[ext_resource type="Script" uid="uid://bgd6c22r8v0uh" path="res://characters/_player/_script/states/wall/wall_slide.gd" id="13_pah6a"]
[ext_resource type="Script" uid="uid://y3inhprtivlv" path="res://characters/_player/_script/states/wall/wall_jump.gd" id="14_p1y4a"]
[ext_resource type="PackedScene" uid="uid://hddy1rnytr1y" path="res://components/hurtbox/scene/hurt_box.tscn" id="15_68da8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8t8fs"]
atlas = ExtResource("2_8io72")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_87yok"]
atlas = ExtResource("2_8io72")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4ti6"]
atlas = ExtResource("2_8io72")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdg4y"]
atlas = ExtResource("2_8io72")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_07mvk"]
atlas = ExtResource("2_8io72")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxftn"]
atlas = ExtResource("2_8io72")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20p5a"]
atlas = ExtResource("2_yaiw4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnwia"]
atlas = ExtResource("2_onk8j")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_78bfd"]
atlas = ExtResource("2_onk8j")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaiw4"]
atlas = ExtResource("2_onk8j")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aau3j"]
atlas = ExtResource("2_onk8j")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cogj"]
atlas = ExtResource("2_onk8j")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khrki"]
atlas = ExtResource("2_onk8j")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6xgn"]
atlas = ExtResource("2_onk8j")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyn13"]
atlas = ExtResource("2_onk8j")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8io72"]
atlas = ExtResource("2_onk8j")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydpga"]
atlas = ExtResource("2_onk8j")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pah6a"]
atlas = ExtResource("2_onk8j")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1y4a"]
atlas = ExtResource("1_s2jb6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc21d"]
atlas = ExtResource("4_78bfd")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8eai"]
atlas = ExtResource("4_78bfd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6itx"]
atlas = ExtResource("4_78bfd")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ofp8"]
atlas = ExtResource("4_78bfd")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dufan"]
atlas = ExtResource("4_78bfd")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uy7dv"]
atlas = ExtResource("4_78bfd")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngsa6"]
atlas = ExtResource("4_78bfd")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pxk3"]
atlas = ExtResource("4_78bfd")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_526gg"]
atlas = ExtResource("4_78bfd")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7hnr"]
atlas = ExtResource("4_78bfd")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qykwy"]
atlas = ExtResource("4_78bfd")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_klm45"]
atlas = ExtResource("4_78bfd")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwmsk"]
atlas = ExtResource("7_ydpga")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1hots"]
atlas = ExtResource("7_ydpga")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrjyu"]
atlas = ExtResource("7_ydpga")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4vm1"]
atlas = ExtResource("7_ydpga")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5oa7x"]
atlas = ExtResource("7_ydpga")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_p1y4a"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t8fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87yok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4ti6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdg4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_07mvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxftn")
}],
"loop": false,
"name": &"double_jump",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_20p5a")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnwia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78bfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaiw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aau3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cogj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khrki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6xgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyn13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8io72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydpga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pah6a")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1y4a")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc21d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8eai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6itx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ofp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dufan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uy7dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngsa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pxk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_526gg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7hnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qykwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klm45")
}],
"loop": true,
"name": &"move",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwmsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1hots")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrjyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4vm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5oa7x")
}],
"loop": true,
"name": &"wall",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q6l2t"]
height = 26.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68da8"]
size = Vector2(20, 22)

[node name="Froggy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_c6xgn")
JUMP_COYOTE_TIME = 0.12
WALL_FRICTION = 100.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p1y4a")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_q6l2t")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
limit_left = 0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("6_aau3j")
current_state = NodePath("PlayerIdle")
metadata/_custom_type_script = "uid://d2ylh53h5m14j"

[node name="PlayerIdle" type="Node" parent="StateMachine"]
script = ExtResource("7_khrki")
metadata/_custom_type_script = "uid://cp0e5rbfc4u2c"

[node name="PlayerJump" type="Node" parent="StateMachine"]
script = ExtResource("9_c6xgn")
metadata/_custom_type_script = "uid://b586jjb6d2v7o"

[node name="PlayerMove" type="Node" parent="StateMachine"]
script = ExtResource("8_c6xgn")
metadata/_custom_type_script = "uid://rnvaiksy3o6a"

[node name="PlayerFall" type="Node" parent="StateMachine"]
script = ExtResource("10_tyn13")
metadata/_custom_type_script = "uid://dos5r1j8a7vnw"

[node name="PlayerWallSlide" type="Node" parent="StateMachine"]
script = ExtResource("13_pah6a")
metadata/_custom_type_script = "uid://bgd6c22r8v0uh"

[node name="PlayerWallJump" type="Node" parent="StateMachine"]
script = ExtResource("14_p1y4a")
metadata/_custom_type_script = "uid://y3inhprtivlv"

[node name="BufferTimer" type="Timer" parent="."]

[node name="CoyoteTimer" type="Timer" parent="."]

[node name="RayCastWallL" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(-17, 0)

[node name="RayCastWallR" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(17, 0)

[node name="HurtBox" parent="." instance=ExtResource("15_68da8")]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_68da8")

[connection signal="timeout" from="BufferTimer" to="." method="_on_buffer_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]

[editable path="HurtBox"]
